--- a/index/homepage.html
+++ b/index/homepage.html
@@ -21,10 +21,10 @@
         <ul>
             <li id="wallaceHome"><a href="../index/homepage.html"><img src="../images/wallaceicon.png" width="20px"></a></li>
             <li><a href="../index/newsPage.html">News</a></li>
-            <li><a href="../index/joiPage.html">Joi</a></li>
-            <li><a href="../index/aboutPage.html">About</a></li>
-            <li><a href="../index/shortsPage.html">Shorts</a></li>
-            <li><a href="../index/demoPage.html">Demo</a></li>
+            <li><a href="">Joi</a></li>
+            <li><a href="">Replicant Test</a></li>
+            <li><a href="">Shorts</a></li>
+            <li><a href="">About</a></li>
             <li><img id="arrow" src="../images/downArrow.png"></li>
         </ul>
                
