--- a/index/homepage.html
+++ b/index/homepage.html
@@ -25,7 +25,7 @@
             <li><a href="">Replicant Test</a></li>
             <li><a href="">Shorts</a></li>
             <li><a href="">About</a></li>
-            <li><img id="arrow" src="../images/downArrow.png"></li>
+            <li><img id="arrowDown" src="../images/downArrow.png"></li>
         </ul>
                
     </nav>
