add more to replicant test

--- a/index/replicantTest.html
+++ b/index/replicantTest.html
@@ -45,9 +45,9 @@
     <div class="questionContainer hide">
         <p id="questionPara">Let’s begin with heart. <strong>Heart.</strong></p>
         <br>
-        <a id="correctAnswer"><p>Heart</p></a>
+        <a><p id="correctAnswer">Heart</p></a>
         <br>
-        <a><p id="secondChoice">Soul</p></a>
+        <a><p id="wrongAnswer">Soul</p></a>
         
     </div>
     
