--- a/index/joiPage.html
+++ b/index/joiPage.html
@@ -22,7 +22,7 @@
             <li id="wallaceHome"><a href="../index/homepage.html"><img src="../images/wallaceiconJoi.png" width="20px"></a></li>
             <li><a href="../index/newsPage.html">News</a></li>
             <li><a href="../index/joiPage.html">Joi</a></li>
-            <li><a href="../index/replicantTest.html">Replicant Test</a></li>
+            <li><a href="../index/replicantTest.html">Baseline Test</a></li>
             <li><a href="">About</a></li>
             <li><img id="arrowDown" src="../images/downArrowJoi.png"></li>
         </ul>
