add about us page and linked it in nav bar

--- a/index/joiPage.html
+++ b/index/joiPage.html
@@ -23,7 +23,7 @@
             <li><a href="../index/newsPage.html">News</a></li>
             <li><a href="../index/joiPage.html">Joi</a></li>
             <li><a href="../index/replicantTest.html">Baseline Test</a></li>
-            <li><a href="">About</a></li>
+            <li><a href="../index/aboutUs.html">About</a></li>
             <li><img id="arrowDown" src="../images/downArrowJoi.png"></li>
         </ul>
                
